# lxpanel2

./: CMakeLists.txt  COPYING  TODO  config.h.in  configure.ac
cmake/: FindIntltool.cmake  FindIntltool2.cmake
data/: CMakeLists.txt  Makefile.am  gtk_cmake_test.desktop.in
data/applet-data/: Makefile.am
data/applet-data/blank/ui/: pref.ui
data/applets/: battery.desktop  sample.desktop.in
data/default/: config.xml
data/ui/: Makefile.am  about.glade.in  about.ui  add-applet.ui  add_applet.ui  panel-preferences.ui  preferences.ui
data/ui/applets/blank/: pref.ui
po/: POTFILES.in  lxpanel2.pot  zh_TW.po
src/: CMakeLists.txt  Makefile.am  Makefile.in  add-applet.vala  applet-backup.vala  applet.vala  button.vala  drawer.vala  gmarkup-dom.vala  grid.vala  gtk-run.c  lxpanel2.deps  lxpanel2.h  lxpanel2.vala  lxpanel2.vapi  module.vala  panel.vala  popup.vala  preferences.vala  upower.vala  utils.vala  xutils.c  xutils.vala
src/applets/: app-menu-applet.vala  battery-applet.vala  blank-applet.vala  clock-applet.vala  launchbar-applet.vala  logout-applet.vala  mounts-applet.vala  netstatus-applet.vala  pager-applet.vala  places-applet.vala  sample-dynamic-applet.vala  show-desktop-applet.vala  systray-applet.vala  task-list-applet-failed.vala  task-list-applet.bak.vala  task-list-applet.vala  wnck-task-list-applet.vala
src/applets/battery/: Makefile.am  battery-applet.vala
src/applets/na-tray/: README  na-tray.c
src/applets/sample/: Makefile.am  Makefile.in  sample-dynamic-applet.vala
src/lib/: Makefile.am  applet.vala  drawer.vala  lxpanel-applet.deps  lxpanel-applet.pc.in  lxpanel2-applet.deps  lxpanel2-applet.pc.in  menu-button.vala  module.vala  popup.vala  utils.vala
src/vapi/: README  config.vapi  gtop-2.0.vapi  lxpanel2-eggwrapbox.vapi  menu-cache.vapi  na-tray.vapi
