NULL=

SUBDIRS= \
	$(NULL)

AM_CPPFLAGS = \
	-I$(srcdir) \
	-DPACKAGE_DATA_DIR=\""$(datadir)/lxpanel2"\" \
	-DPACKAGE_LIB_DIR=\""$(libdir)/lxpanel2"\" \
	-DPACKAGE_UI_DIR=\""$(datadir)/lxpanel2/ui"\" \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	--include config.h \
	$(NULL)
# FIXME: --include config.h is not a cross-compiler solution and is gcc-only.

# The library for applet development -----------------------------------

lib_LTLIBRARIES=liblxpanel-applet.la

VALAFLAGS = \
	--pkg gtk+-3.0 \
	--pkg gdk-3.0 \
    --pkg gio-2.0 \
    --pkg gio-unix-2.0 \
    --pkg gmodule-2.0 \
    --pkg posix \
	--pkg eggwrapbox \
	--pkg config \
	--vapidir=../vapi \
	--verbose \
	--thread \
	--library lxpanel-applet \
	--header lxpanel-applet.h \
	--vapi lxpanel-applet-original.vapi \
	--disable-warnings \
	$(NULL)

# EggWrapBox from libegg
LIBEGG_SOURCES = \
	egg/eggwrapbox.c \
	egg/eggwrapbox.h \
	egg/eggwrapbox-enums.c \
	egg/eggwrapbox-enums.h \
	$(NULL)

# later we should make applet development related
# files a separate library
liblxpanel_applet_la_SOURCES = \
	applet.vala \
	button.vala \
	menu-button.vala \
	drawer.vala \
	popup.vala \
	gmarkup-dom.vala \
	utils.vala \
	module.vala \
	upower.vala \
	$(LIBEGG_SOURCES) \
	$(NULL)

liblxpanel_applet_la_CFLAGS = \
    -Iegg \
	$(GTK_CFLAGS) \
	$(GIO_CFLAGS) \
	$(WNCK_CFLAGS) \
	$(GTOP_CFLAGS) \
	$(MENU_CACHE_CFLAGS) \
	$(X11_CFLAGS) \
	$(LIBFM_CFLAGS) \
	-Werror-implicit-function-declaration \
	$(ADDITIONAL_FLAGS) \
	-fPIC \
	-shared \
	$(NULL)

liblxpanel_applet_la_LIBADD = \
	$(GTK_LIBS) \
	$(INTLLIBS) \
	$(NULL)

liblxpanel_applet_la_LDFLAGS = \
	-export-dynamic \
	$(NULL)

liblxpanel_applet_la_includedir = $(includedir)/lxpanel2
liblxpanel_applet_la_include_HEADERS = lxpanel-applet.h

# Vala has been known to generate broken vapi files sometimes.
# Unfortunately, we encounter a bug that the generated vapi file lacks
# global:: in several places. We use sed tool to fix it here.

# Rules fixing the broken vapi file generated by valac
lxpanel-applet.vapi: lxpanel-applet-original.vapi
	$(SED) "s/\([^:]\)Lxpanel\./\1global::Lxpanel\./" lxpanel-applet-original.vapi > $@.tmp && mv $@.tmp $@

# Add a local target to be triggered by make "all"
#all-local: lxpanel-applet.vapi

vapifiledir=$(datadir)/vala/vapi
vapifile_DATA = \
	lxpanel-applet.vapi \
	lxpanel-applet.deps \
	$(NULL)

# Workarounds to force the build
BUILT_SOURCES= \
	$(NULL)

CLEANFILES = \
	$(BUILT_SOURCES) \
	lxpanel-applet.vapi \
	$(NULL)

EXTRA_DIST = \
	lxpanel-applet.deps \
	lxpanel-applet-original.vapi \
	$(NULL)
